css/source/sections.scss
/* ... */
/* CONTACT SECTION */

#contact {
    
    .mail {
        @extend %user-select-none;
        border: .1em solid currentColor;
        color: $blue;
        
        &:focus,
        &:hover {
            color: $red;
        }
    }
    
    .socialmedia {
        @extend %user-select-none;
        margin: 10px 10px 0 0;
        background: rgba(0,0,0,.05);
        color: #525252;
        
        &:focus,
        &:hover {
            background: rgba(0,0,0,.15);
        }
        
        &:before {
            content: '';
            display: inline-block;
            width: .9em; height: .9em; margin: 0 .8em 0 0;
            @include opacity(.8);
        }
        
        &.github:before {@extend %icon-github;}
        &.twitter:before {@extend %icon-twitter;}
    }
}

